--- a/Mission_to_Mars/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars/Mission_to_Mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - ====== WebDriver manager ======\n"
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 89.0.4389\n",
+      "[WDM] - Get LATEST driver version for 89.0.4389\n",
+      "[WDM] - Driver [/Users/kay/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
      ]
     },
     {
@@ -32,15 +35,6 @@
      "text": [
       "\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Current google-chrome version is 89.0.4389\n",
-      "[WDM] - Get LATEST driver version for 89.0.4389\n",
-      "[WDM] - Driver [/Users/kay/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -52,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars1.jpg'"
+       "'image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,16 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +283,7 @@
        "6             Temperature:     -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +383,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +405,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +466,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,15 +486,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'news_titles': 'With Mars Methane Mystery Unsolved, Curiosity Serves Scientists a New One: Oxygen',\n",
-       " 'news_p': 'For the first time in the history of space exploration, scientists have measured the seasonal changes in the gases that fill the air directly above the surface of Gale Crater on Mars. ',\n",
-       " 'featured_image_url': 'https://spaceimages-mars.com/image/featured/mars1.jpg',\n",
+       "{'news_titles': 'NASA Prepares for Moon and Mars With New Addition to Its Deep Space Network',\n",
+       " 'news_p': 'Robotic spacecraft will be able to communicate with the dish using radio waves and lasers.',\n",
+       " 'featured_image_url': 'https://spaceimages-mars.com/image/featured/mars3.jpg',\n",
        " 'facts': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
        " 'hemispheres': [{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
        "   'title': 'Cerberus Hemisphere Enhanced'},\n",
@@ -512,7 +506,7 @@
        "   'title': 'Valles Marineris Hemisphere Enhanced'}]}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,11 +517,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-44-4518c2b2e3f2>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-44-4518c2b2e3f2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def scrape()\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "#convert to phython script (function)\n",
+    "#convert to notebook to python script\n",
+    "def scrape()\n",
+    "    from bs4 import BeautifulSoup\n",
+    "    from splinter import Browser\n",
+    "    import pandas as pd\n",
+    "    import time\n",
+    "    from webdriver_manager.chrome import ChromeDriverManager\n",
+    "    from IPython.display import display \n",
+    "    from IPython.display import display_html\n",
+    "\n",
+    "    #Set Executable Path & Initialize Chrome Browser\n",
+    "    executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "    browser = Browser('chrome', **executable_path, headless=False)\n",
+    "    \n",
+    "    #NASA Mars News Site\n",
+    "    url = \"https://redplanetscience.com/\"\n",
+    "    browser.visit(url)\n",
+    "    \n",
+    "    # Parse Results HTML with BeautifulSoup>\n",
+    "\n",
+    "    html = browser.html\n",
+    "    news_soup = BeautifulSoup(html, \"html.parser\")\n",
+    "    \n",
+    "    #News\n",
+    "    news_title=news_soup.find(\"div\", class_=\"content_title\").text\n",
+    "    news_p=news_soup.find(\"div\", class_=\"article_teaser_body\").text\n",
+    "    mars[\"news_titles\"]=news_title\n",
+    "    mars[\"news_p\"]=news_p\n",
+    "    \n",
+    "    #JPL Mars Space Image\n",
+    "    url = \"https://spaceimages-mars.com/\"\n",
+    "    browser.visit(url)\n",
+    "    browser.find_by_tag(\"button\")[1].click()\n",
+    "    html = browser.html\n",
+    "    jplimage = BeautifulSoup(html, \"html.parser\")\n",
+    "    image=jplimage.find('img',class_=\"fancybox-image\").get('src')\n",
+    "    image\n",
+    "    featimgurl=\"https://spaceimages-mars.com/\"+image\n",
+    "    featimgurl\n",
+    "    mars[\"featured_image_url\"]=featimgurl\n",
+    "    \n",
+    "    #Facts\n",
+    "    url = \"https://galaxyfacts-mars.com/\"\n",
+    "    df=pd.read_html(url)\n",
+    "    df=df[0]\n",
+    "    df\n",
+    "    df.columns=[\"Description\",\"Mars\",\"Earth\"]\n",
+    "    df.set_index(\"Description\",inplace=True)\n",
+    "    df\n",
+    "    df_html=df.to_html()\n",
+    "    df_html\n",
+    "    mars[\"facts\"]=df_html\n",
+    "    \n",
+    "    #hemispheres\n",
+    "    url = \"https://marshemispheres.com/\"\n",
+    "    browser.visit(url)\n",
+    "    result=browser.find_by_css(\"a.product-item img\")\n",
+    "\n",
+    "    hemisphere_image_url=[]\n",
+    "\n",
+    "    for i in range(len(result)):\n",
+    "        hemisphere={}\n",
+    "        browser.find_by_css(\"a.product-item img\")[i].click()\n",
+    "        element = browser.links.find_by_text('Sample').first\n",
+    "        img_url= element[\"href\"]\n",
+    "        hemisphere[\"img_url\"]=img_url\n",
+    "        hemisphere[\"title\"]=browser.find_by_css(\"h2.title\").text\n",
+    "        hemisphere_image_url.append(hemisphere)\n",
+    "        browser.back()\n",
+    "        \n",
+    "    hemisphere_image_url\n",
+    "    mars[\"hemispheres\"]=hemisphere_image_url\n",
+    "  \n",
+    "    # Return one python dictionary containing all of the scraped data\n",
+    "    mars = {'news_title':news_title}\n",
+    "    mars['news_p']=news_p\n",
+    "    mars ['featured_image_url']=featured_image_url\n",
+    "    mars['facts']=facts\n",
+    "    mars['hemisphere_image_urls']=hemisphere_image_urls\n",
+    "\n",
+    "    # close the browser\n",
+    "    browser.quit()\n",
+    "\n",
+    "    return main_dict\n",
+    "\n",
+    "\n",
+    "\n",
     "#delete some lines (cells, ie run blah)\n",
     "#grab to app.py (Day 3)\n",
     "#index.html use same variables"
