--- a/Mission_to_Mars/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars/Mission_to_Mars.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install nbconvert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +20,13 @@
     "from splinter import Browser\n",
     "import pandas as pd\n",
     "import time\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import nbconvert"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,8 +35,7 @@
      "text": [
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 89.0.4389\n",
-      "[WDM] - Get LATEST driver version for 89.0.4389\n",
-      "[WDM] - Driver [/Users/kay/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
+      "[WDM] - Get LATEST driver version for 89.0.4389\n"
      ]
     },
     {
@@ -35,6 +44,13 @@
      "text": [
       "\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Driver [/Users/kay/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -46,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars2.jpg'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +299,7 @@
        "6             Temperature:     -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +399,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +421,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +482,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,15 +502,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'news_titles': 'NASA Prepares for Moon and Mars With New Addition to Its Deep Space Network',\n",
-       " 'news_p': 'Robotic spacecraft will be able to communicate with the dish using radio waves and lasers.',\n",
-       " 'featured_image_url': 'https://spaceimages-mars.com/image/featured/mars3.jpg',\n",
+       "{'news_titles': 'Independent Review Indicates NASA Prepared for Mars Sample Return Campaign',\n",
+       " 'news_p': 'NASA released an independent review report Tuesday indicating the agency is well positioned for its Mars Sample Return campaign to bring pristine samples from Mars to Earth for scientific study.',\n",
+       " 'featured_image_url': 'https://spaceimages-mars.com/image/featured/mars2.jpg',\n",
        " 'facts': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
        " 'hemispheres': [{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
        "   'title': 'Cerberus Hemisphere Enhanced'},\n",
@@ -506,121 +522,39 @@
        "   'title': 'Valles Marineris Hemisphere Enhanced'}]}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "mars"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-44-4518c2b2e3f2>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-44-4518c2b2e3f2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def scrape()\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#convert to notebook to python script\n",
-    "def scrape()\n",
-    "    from bs4 import BeautifulSoup\n",
-    "    from splinter import Browser\n",
-    "    import pandas as pd\n",
-    "    import time\n",
-    "    from webdriver_manager.chrome import ChromeDriverManager\n",
-    "    from IPython.display import display \n",
-    "    from IPython.display import display_html\n",
-    "\n",
-    "    #Set Executable Path & Initialize Chrome Browser\n",
-    "    executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "    browser = Browser('chrome', **executable_path, headless=False)\n",
-    "    \n",
-    "    #NASA Mars News Site\n",
-    "    url = \"https://redplanetscience.com/\"\n",
-    "    browser.visit(url)\n",
-    "    \n",
-    "    # Parse Results HTML with BeautifulSoup>\n",
-    "\n",
-    "    html = browser.html\n",
-    "    news_soup = BeautifulSoup(html, \"html.parser\")\n",
-    "    \n",
-    "    #News\n",
-    "    news_title=news_soup.find(\"div\", class_=\"content_title\").text\n",
-    "    news_p=news_soup.find(\"div\", class_=\"article_teaser_body\").text\n",
-    "    mars[\"news_titles\"]=news_title\n",
-    "    mars[\"news_p\"]=news_p\n",
-    "    \n",
-    "    #JPL Mars Space Image\n",
-    "    url = \"https://spaceimages-mars.com/\"\n",
-    "    browser.visit(url)\n",
-    "    browser.find_by_tag(\"button\")[1].click()\n",
-    "    html = browser.html\n",
-    "    jplimage = BeautifulSoup(html, \"html.parser\")\n",
-    "    image=jplimage.find('img',class_=\"fancybox-image\").get('src')\n",
-    "    image\n",
-    "    featimgurl=\"https://spaceimages-mars.com/\"+image\n",
-    "    featimgurl\n",
-    "    mars[\"featured_image_url\"]=featimgurl\n",
-    "    \n",
-    "    #Facts\n",
-    "    url = \"https://galaxyfacts-mars.com/\"\n",
-    "    df=pd.read_html(url)\n",
-    "    df=df[0]\n",
-    "    df\n",
-    "    df.columns=[\"Description\",\"Mars\",\"Earth\"]\n",
-    "    df.set_index(\"Description\",inplace=True)\n",
-    "    df\n",
-    "    df_html=df.to_html()\n",
-    "    df_html\n",
-    "    mars[\"facts\"]=df_html\n",
-    "    \n",
-    "    #hemispheres\n",
-    "    url = \"https://marshemispheres.com/\"\n",
-    "    browser.visit(url)\n",
-    "    result=browser.find_by_css(\"a.product-item img\")\n",
-    "\n",
-    "    hemisphere_image_url=[]\n",
-    "\n",
-    "    for i in range(len(result)):\n",
-    "        hemisphere={}\n",
-    "        browser.find_by_css(\"a.product-item img\")[i].click()\n",
-    "        element = browser.links.find_by_text('Sample').first\n",
-    "        img_url= element[\"href\"]\n",
-    "        hemisphere[\"img_url\"]=img_url\n",
-    "        hemisphere[\"title\"]=browser.find_by_css(\"h2.title\").text\n",
-    "        hemisphere_image_url.append(hemisphere)\n",
-    "        browser.back()\n",
-    "        \n",
-    "    hemisphere_image_url\n",
-    "    mars[\"hemispheres\"]=hemisphere_image_url\n",
-    "  \n",
-    "    # Return one python dictionary containing all of the scraped data\n",
-    "    mars = {'news_title':news_title}\n",
-    "    mars['news_p']=news_p\n",
-    "    mars ['featured_image_url']=featured_image_url\n",
-    "    mars['facts']=facts\n",
-    "    mars['hemisphere_image_urls']=hemisphere_image_urls\n",
-    "\n",
-    "    # close the browser\n",
-    "    browser.quit()\n",
-    "\n",
-    "    return main_dict\n",
-    "\n",
-    "\n",
     "\n",
     "#delete some lines (cells, ie run blah)\n",
     "#grab to app.py (Day 3)\n",
     "#index.html use same variables"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
